src/gen/.antlr/LispParser.java
// Generated from /home/omarwawy/IdeaProjects/Lisp/src/gen/LispParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LispParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, STRING_BEGIN=2, STRING_CONTENT=3, STRING_END=4, ESCAPE=5, OPEN=6, 
		CLOSE=7, QUOTE=8, HASH=9, HASHCOMPLEX=10, REST=11, OPTIONAL=12, WS=13, 
		TRUE=14, FALSE=15, PLUS=16, MINUS=17, MULTIPLY=18, DIVIDE=19, NUMEQUAL=20, 
		EQUAL=21, LT=22, GT=23, LTE=24, GTE=25, AND=26, OR=27, NOT=28, MIN=29, 
		MAX=30, INCF=31, DECF=32, LOGAND=33, LOGIOR=34, LOGXOR=35, LOGNOR=36, 
		LOGEQV=37, EVEN=38, ODD=39, ZERO=40, BOUND=41, TYPE=42, COND=43, IF=44, 
		WHEN=45, UNLESS=46, CASE=47, OTHERWISE=48, DOLIST=49, DOTIMES=50, LOOP=51, 
		FOR=52, DO_LOOP=53, BLOCK=54, RETURN=55, RETURN_FROM=56, IN=57, FROM=58, 
		TO=59, BY=60, ERROR=61, FUNCALL=62, APPLY=63, MAPCAR=64, LAMBDA=65, VECTOR=66, 
		CHARACTER=67, ARRAY=68, MARCO=69, SETQ=70, FUNCTION=71, STRUCT=72, PRINT=73, 
		PRIN1=74, PRINC=75, DEFPARAM=76, VARIABLE=77, WRITE=78, FORMAT=79, LET=80, 
		PROGN=81, CONSTANT=82, LIST=83, CONS=84, FIXNUM=85, CHARLESSP=86, STRINGLESSP=87, 
		STRING=88, BIGNUM=89, NUMBER=90, REAL=91, INTEGER=92, RATION=93, FLOAT=94, 
		COMPLEX=95, BOOLEAN=96, PI=97, SIN=98, COS=99, TAN=100, ASIN=101, ACOS=102, 
		ATAN=103, SINH=104, COSH=105, TANH=106, EXP=107, EXPT=108, SQRT=109, LOG=110, 
		CONJUGATE=111, ABS=112, GCD=113, LCM=114, ISQRT=115, FLOOR=116, CEIL=117, 
		MODULO=118, PUSH=119, POP=120, ARRAYREF=121, SORT=122, APPEND=123, REVERSE=124, 
		MEMBERS=125, SUBSET=126, INTERSECT=127, UNION=128, DIFFERENT=129, ELEMENTTYPE=130, 
		INTIALELEMENT=131, INTIALCONTENT=132, ADJUSTABLE=133, FILLPOINTER=134, 
		TYPEST=135, READONLY=136, NUMBERDEF=137, ID=138, MULTILINE_COMMENT=139, 
		SINGLELINECOMMENT=140, FORMAT_DESTINATION=141, TILDE_F=142, TILDE_A=143, 
		TILDE_S=144, TILDE_PERCENT=145, TILDE_AMPERSAND=146, TILDE_D=147;
	public static final int
		RULE_lisp = 0, RULE_expression = 1, RULE_list = 2, RULE_hashed_expression = 3, 
		RULE_hashvector_expression = 4, RULE_literals_expression = 5, RULE_list_content = 6, 
		RULE_number_expression = 7, RULE_complex_number_definetion = 8, RULE_arithmetic_expression = 9, 
		RULE_comparison_expression = 10, RULE_conditional_expression = 11, RULE_if_expression = 12, 
		RULE_when_expression = 13, RULE_unless_expression = 14, RULE_cond_expression = 15, 
		RULE_cond_clause = 16, RULE_case_expression = 17, RULE_case_clause = 18, 
		RULE_value_list = 19, RULE_nested_list = 20, RULE_default_clause = 21, 
		RULE_logical_expression = 22, RULE_types = 23, RULE_types_expression = 24, 
		RULE_numeric_expression = 25, RULE_loop_expression = 26, RULE_dolist_expr = 27, 
		RULE_dotimes_expr = 28, RULE_loop_expr = 29, RULE_loop_clause = 30, RULE_listForm = 31, 
		RULE_listForm_content = 32, RULE_return_expression = 33, RULE_block_expression = 34, 
		RULE_return_from_expression = 35, RULE_error_handling_expression = 36, 
		RULE_error_expression = 37, RULE_pre_define_function_expression = 38, 
		RULE_print_function_expression = 39, RULE_write_function_expression = 40, 
		RULE_complex_expression = 41, RULE_float_expression = 42, RULE_trigonometric_expression = 43, 
		RULE_hyperbolic_expression = 44, RULE_gcd_expression = 45, RULE_lcm_expression = 46, 
		RULE_floor_expression = 47, RULE_ceil_expression = 48, RULE_modulo_expression = 49, 
		RULE_format_expression = 50, RULE_format_string = 51, RULE_string_format_argument = 52, 
		RULE_variable_definition_expression = 53, RULE_constant_definition_expression = 54, 
		RULE_parameter_definition_expression = 55, RULE_list_structure_expression = 56, 
		RULE_vector_expression = 57, RULE_array_expression = 58, RULE_array_key_argument = 59, 
		RULE_cons_expression = 60, RULE_setq_expression = 61, RULE_function_definition = 62, 
		RULE_macro_definition_expression = 63, RULE_structure_definition_expression = 64, 
		RULE_structure_content = 65, RULE_parameter_list = 66, RULE_difference_expression = 67, 
		RULE_union_expression = 68, RULE_member_expression = 69, RULE_subset_expression = 70, 
		RULE_intersection_expression = 71, RULE_append_expression = 72, RULE_reverse_expression = 73, 
		RULE_character_function_expression = 74, RULE_sort_expression = 75, RULE_hashcomparison = 76, 
		RULE_arrayref_expression = 77, RULE_push_expression = 78, RULE_pop_expression = 79, 
		RULE_function_call_expression = 80, RULE_function_call = 81, RULE_function_call_function = 82, 
		RULE_apply_call_function = 83, RULE_mapcar_function = 84, RULE_progn_expression = 85, 
		RULE_let_expression = 86, RULE_let_binding = 87, RULE_lambda_function = 88, 
		RULE_string = 89;
	private static String[] makeRuleNames() {
		return new String[] {
			"lisp", "expression", "list", "hashed_expression", "hashvector_expression", 
			"literals_expression", "list_content", "number_expression", "complex_number_definetion", 
			"arithmetic_expression", "comparison_expression", "conditional_expression", 
			"if_expression", "when_expression", "unless_expression", "cond_expression", 
			"cond_clause", "case_expression", "case_clause", "value_list", "nested_list", 
			"default_clause", "logical_expression", "types", "types_expression", 
			"numeric_expression", "loop_expression", "dolist_expr", "dotimes_expr", 
			"loop_expr", "loop_clause", "listForm", "listForm_content", "return_expression", 
			"block_expression", "return_from_expression", "error_handling_expression", 
			"error_expression", "pre_define_function_expression", "print_function_expression", 
			"write_function_expression", "complex_expression", "float_expression", 
			"trigonometric_expression", "hyperbolic_expression", "gcd_expression", 
			"lcm_expression", "floor_expression", "ceil_expression", "modulo_expression", 
			"format_expression", "format_string", "string_format_argument", "variable_definition_expression", 
			"constant_definition_expression", "parameter_definition_expression", 
			"list_structure_expression", "vector_expression", "array_expression", 
			"array_key_argument", "cons_expression", "setq_expression", "function_definition", 
			"macro_definition_expression", "structure_definition_expression", "structure_content", 
			"parameter_list", "difference_expression", "union_expression", "member_expression", 
			"subset_expression", "intersection_expression", "append_expression", 
			"reverse_expression", "character_function_expression", "sort_expression", 
			"hashcomparison", "arrayref_expression", "push_expression", "pop_expression", 
			"function_call_expression", "function_call", "function_call_function", 
			"apply_call_function", "mapcar_function", "progn_expression", "let_expression", 
			"let_binding", "lambda_function", "string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'\"'", null, "'('", "')'", "'''", "'#'", null, 
			"'&rest'", "'&optional'", null, "'t'", "'nil'", "'+'", "'-'", "'*'", 
			"'/'", "'='", null, "'<'", "'>'", "'<='", "'>='", "'and'", "'or'", "'not'", 
			"'min'", "'max'", "'incf'", "'decf'", "'logand'", "'logior'", "'logxor'", 
			"'lognor'", "'logeqv'", "'evenp'", "'oddp'", "'zerop'", "'boundp'", "'typep'", 
			"'cond'", "'if'", "'when'", "'unless'", "'case'", "'otherwise'", "'dolist'", 
			"'dotimes'", "'loop'", "'for'", "'do'", "'block'", "'return'", "'return-from'", 
			"'in'", "'from'", "'to'", "'by'", "'error'", "'funcall'", "'apply'", 
			"'mapcar'", "'lambda'", "'vector'", "'char'", "'make-array'", "'defmacro'", 
			"'setq'", "'defun'", "'defstruct'", "'print'", "'prin1'", "'princ'", 
			"'defparameter'", "'defvar'", "'write'", "'format'", "'let'", "'prog'", 
			"'defconstant'", "'list'", "'cons'", "'fixnum'", "'char-lessp'", "'string-lessp'", 
			"'string'", "'bignum'", "'number'", "'real'", "'integer'", "'ratio'", 
			"'float'", "'complex'", "'boolean'", "'pi'", "'sin'", "'cos'", "'tan'", 
			"'asin'", "'acos'", "'atan'", "'sinh'", "'cosh'", "'tanh'", "'exp'", 
			"'expt'", "'sqrt'", "'log'", "'conjugate'", "'abs'", "'gcd'", "'lcm'", 
			"'isqrt'", "'floor'", "'ceiling'", null, "'push'", "'pop'", "'aref'", 
			"'sort'", "'append'", "'reverse'", "'member'", "'subsetp'", "'intersection'", 
			"'union'", "'set-difference'", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'~a'", "'~s'", "'~%'", "'~&'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "STRING_BEGIN", "STRING_CONTENT", "STRING_END", "ESCAPE", 
			"OPEN", "CLOSE", "QUOTE", "HASH", "HASHCOMPLEX", "REST", "OPTIONAL", 
			"WS", "TRUE", "FALSE", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "NUMEQUAL", 
			"EQUAL", "LT", "GT", "LTE", "GTE", "AND", "OR", "NOT", "MIN", "MAX", 
			"INCF", "DECF", "LOGAND", "LOGIOR", "LOGXOR", "LOGNOR", "LOGEQV", "EVEN", 
			"ODD", "ZERO", "BOUND", "TYPE", "COND", "IF", "WHEN", "UNLESS", "CASE", 
			"OTHERWISE", "DOLIST", "DOTIMES", "LOOP", "FOR", "DO_LOOP", "BLOCK", 
			"RETURN", "RETURN_FROM", "IN", "FROM", "TO", "BY", "ERROR", "FUNCALL", 
			"APPLY", "MAPCAR", "LAMBDA", "VECTOR", "CHARACTER", "ARRAY", "MARCO", 
			"SETQ", "FUNCTION", "STRUCT", "PRINT", "PRIN1", "PRINC", "DEFPARAM", 
			"VARIABLE", "WRITE", "FORMAT", "LET", "PROGN", "CONSTANT", "LIST", "CONS", 
			"FIXNUM", "CHARLESSP", "STRINGLESSP", "STRING", "BIGNUM", "NUMBER", "REAL", 
			"INTEGER", "RATION", "FLOAT", "COMPLEX", "BOOLEAN", "PI", "SIN", "COS", 
			"TAN", "ASIN", "ACOS", "ATAN", "SINH", "COSH", "TANH", "EXP", "EXPT", 
			"SQRT", "LOG", "CONJUGATE", "ABS", "GCD", "LCM", "ISQRT", "FLOOR", "CEIL", 
			"MODULO", "PUSH", "POP", "ARRAYREF", "SORT", "APPEND", "REVERSE", "MEMBERS", 
			"SUBSET", "INTERSECT", "UNION", "DIFFERENT", "ELEMENTTYPE", "INTIALELEMENT", 
			"INTIALCONTENT", "ADJUSTABLE", "FILLPOINTER", "TYPEST", "READONLY", "NUMBERDEF", 
			"ID", "MULTILINE_COMMENT", "SINGLELINECOMMENT", "FORMAT_DESTINATION", 
			"TILDE_F", "TILDE_A", "TILDE_S", "TILDE_PERCENT", "TILDE_AMPERSAND", 
			"TILDE_D"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LispParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LispParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LispContext extends ParserRuleContext {
		public LispContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lisp; }
	 
		public LispContext() { }
		public void copyFrom(LispContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LISP_EXPRESSIONContext extends LispContext {
		public TerminalNode EOF() { return getToken(LispParser.EOF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public LISP_EXPRESSIONContext(LispContext ctx) { copyFrom(ctx); }
	}

	public final LispContext lisp() throws RecognitionException {
		LispContext _localctx = new LispContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lisp);
		int _la;
		try {
			_localctx = new LISP_EXPRESSIONContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(181); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(180);
				expression();
				}
				}
				setState(183); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 51012L) != 0) || _la==NUMBERDEF || _la==ID );
			setState(185);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NUMBERContext extends ExpressionContext {
		public TerminalNode NUMBERDEF() { return getToken(LispParser.NUMBERDEF, 0); }
		public NUMBERContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VARIABLEContext extends ExpressionContext {
		public TerminalNode ID() { return getToken(LispParser.ID, 0); }
		public VARIABLEContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class STRINGContext extends ExpressionContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public STRINGContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TRUEContext extends ExpressionContext {
		public TerminalNode TRUE() { return getToken(LispParser.TRUE, 0); }
		public TRUEContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FALSEContext extends ExpressionContext {
		public TerminalNode FALSE() { return getToken(LispParser.FALSE, 0); }
		public FALSEContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LISTContext extends ExpressionContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public LISTContext(ExpressionContext ctx) { copyFrom(ctx); }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(193);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new VARIABLEContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				match(ID);
				}
				break;
			case 2:
				_localctx = new NUMBERContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				match(NUMBERDEF);
				}
				break;
			case 3:
				_localctx = new STRINGContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(189);
				string();
				}
				break;
			case 4:
				_localctx = new TRUEContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(190);
				match(TRUE);
				}
				break;
			case 5:
				_localctx = new FALSEContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(191);
				match(FALSE);
				}
				break;
			case 6:
				_localctx = new LISTContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(192);
				list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
	 
		public ListContext() { }
		public void copyFrom(ListContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NON_EMPTYLISTContext extends ListContext {
		public TerminalNode OPEN() { return getToken(LispParser.OPEN, 0); }
		public List_contentContext list_content() {
			return getRuleContext(List_contentContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(LispParser.CLOSE, 0); }
		public NON_EMPTYLISTContext(ListContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EMPTYLISTContext extends ListContext {
		public TerminalNode OPEN() { return getToken(LispParser.OPEN, 0); }
		public TerminalNode CLOSE() { return getToken(LispParser.CLOSE, 0); }
		public EMPTYLISTContext(ListContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LITERALEXPRESSIONContext extends ListContext {
		public Literals_expressionContext literals_expression() {
			return getRuleContext(Literals_expressionContext.class,0);
		}
		public LITERALEXPRESSIONContext(ListContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LISP_HASHEDContext extends ListContext {
		public Hashed_expressionContext hashed_expression() {
			return getRuleContext(Hashed_expressionContext.class,0);
		}
		public LISP_HASHEDContext(ListContext ctx) { copyFrom(ctx); }
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_list);
		try {
			setState(203);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new NON_EMPTYLISTContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(195);
				match(OPEN);
				setState(196);
				list_content();
				setState(197);
				match(CLOSE);
				}
				break;
			case 2:
				_localctx = new EMPTYLISTContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(199);
				match(OPEN);
				setState(200);
				match(CLOSE);
				}
				break;
			case 3:
				_localctx = new LITERALEXPRESSIONContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(201);
				literals_expression();
				}
				break;
			case 4:
				_localctx = new LISP_HASHEDContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(202);
				hashed_expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Hashed_expressionContext extends ParserRuleContext {
		public Hashed_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hashed_expression; }
	 
		public Hashed_expressionContext() { }
		public void copyFrom(Hashed_expressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LISP_HASHVECTORContext extends Hashed_expressionContext {
		public Hashvector_expressionContext hashvector_expression() {
			return getRuleContext(Hashvector_expressionContext.class,0);
		}
		public LISP_HASHVECTORContext(Hashed_expressionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class COMPLEXNUMBERDEFINITIONContext extends Hashed_expressionContext {
		public Complex_number_definetionContext complex_number_definetion() {
			return getRuleContext(Complex_number_definetionContext.class,0);
		}
		public COMPLEXNUMBERDEFINITIONContext(Hashed_expressionContext ctx) { copyFrom(ctx); }
	}

	public final Hashed_expressionContext hashed_expression() throws RecognitionException {
		Hashed_expressionContext _localctx = new Hashed_expressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_hashed_expression);
		try {
			setState(207);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HASH:
				_localctx = new LISP_HASHVECTORContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(205);
				hashvector_expression();
				}
				break;
			case HASHCOMPLEX:
				_localctx = new COMPLEXNUMBERDEFINITIONContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(206);
				complex_number_definetion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
